# grpc-address-space

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-grpc-address-space  bazel-out  bazel-testlogs
kv_store/: AddressSpace.cc  AddressSpace.h  kv_store.cc  kv_store.h  kv_store_client.cpp  kv_store_client.h
kv_store_grpc/: kv_store_server.cpp  kv_store_server.h
protos/: kv_store.proto
test/: AddressSpaceTests.cc  AddressSpaceTests.h  BUILD.bazel  KVStoreTests.cc  KVStoreTests.h
